tests/NormalTests/paczka1/fuzzy1/29397042.err
Error in line 1: kiL3mHfZfv5 A775 68,2
Error in line 5: S657 S657 20,0
Error in line 9: B3pG S657 80,2
Error in line 17: S657 S709 21,1
Error in line 2: aSI S727 35,2
Error in line 21: S657 S727 63,5
Error in line 11: B3pG S709 4,0
